--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -28,11 +28,16 @@ jobs:
       - name: Build, tag, and push image to Amazon ECR
         env:
           ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          ECR_REPOSITORY: keeker
+          ECR_REPOSITORY: keeker  # Replace with your actual repository name
           IMAGE_TAG: latest
         run: |
+          echo "Building image $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
           docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 
       - name: Output the image name
-        run: echo "Docker Image Name: $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
+        run: echo "Docker Image Name: ${ECR_REGISTRY}/${ECR_REPOSITORY}:${IMAGE_TAG}"
+        env:
+          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+          ECR_REPOSITORY: keeker  # Ensure this is the same as above
+          IMAGE_TAG: latest
