--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -26,14 +26,10 @@ jobs:
         uses: aws-actions/amazon-ecr-login@v1
 
       - name: Build, tag, and push image to Amazon ECR
-        env:
-          ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-          ECR_REPOSITORY: keeker # Replace with your actual repository name
-          IMAGE_TAG: latest
         run: |
-          echo "Building image $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
-          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
-          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+          echo "Building image for ${{ steps.login-ecr.outputs.registry }}/keeker:latest"
+          docker build -t ${{ steps.login-ecr.outputs.registry }}/keeker:latest .
+          docker push ${{ steps.login-ecr.outputs.registry }}/keeker:latest
 
-
-
+      - name: Output the image name
+        run: echo "Docker Image Name: ${{ steps.login-ecr.outputs.registry }}/keeker:latest"
